# sober-oss

./: .gitignore  ARCHITECTURE.md  BINARY_ANALYSIS.md  ExportAllDecompiled.java  LICENSE  README.md  SECURITY_AUDIT.md  meson.build
analysis/: imports_libbadcpu_so.txt  imports_libloader_so.txt  imports_sober.txt  imports_sober_services.txt  libbadcpu_decompilation.md  libbadcpu_strings_sorted.txt  libloader_decompilation.md  libloader_strings_sorted.txt  sober_services_decompilation.md  sober_services_strings_sorted.txt  sober_strings_sorted.txt  strings_libbadcpu_so.txt  strings_libloader_so.txt  strings_sober.txt  strings_sober_services.txt
decompiled/libbadcpu/: libbadcpu.c
decompiled/libloader/: libloader.c
decompiled/sober/: sober.c
decompiled/sober_services/: sober_services.c
docs/: config_schema.md
include/: badcpu.h
scripts/: extract_strings.sh  ghidra_decompile.py
src/libbadcpu/: badcpu.cpp  cpuid.cpp  decoder.cpp  emulator.cpp  meson.build  signal_handler.cpp
src/libbadcpu/test/: test_badcpu.cpp
